# Program

./: .gitignore  .gitignore.swp  LICENSE
cpp/Interview/: CMakeLists.txt  connection_pool.cpp  deque.cpp  memory_pool.cpp  move_forward.cpp  object_pool.cpp  printer.cpp  queue.cpp  shared_mem.py  shared_ptr  shared_ptr.cpp  singleton.cpp  small_bitmask.cpp  small_bitmask.hpp  string.cpp  test.py  thread_pool.cpp  tmp  tmp.cpp  todo.txt  vector  vector.cpp
cpp/Interview/lock/: print_in_turn  print_in_turn.cpp  singleton.cpp
cpp/Interview/lock_free/: CMakeLists.txt  mpmc.cpp  mpmc.hpp  print_in_turn.cpp  singleton  singleton.cpp  spsc.cpp  test.cpp  unordered_map  unordered_map.cpp
cpp/Interview/smart_pointers/: control_block.hpp  enable_shared_from_this.hpp  make_helpers.hpp  shared_ptr.hpp  test.cpp  tmp.md  unique_ptr.hpp  weak_ptr.hpp
cpp/Template/: CMakeLists.txt  MetaNN.cpp  template  template.cpp
cpp/Template/.cache/clangd/index/: template.cpp.1E097E685318FFB1.idx
cpp/Template/MetaNN/: CMakeLists.txt
cpp/Template/MetaNN/facilities/: traits.h
cpp/Template/include/MetaNN/data/: scalar.h
cpp/Template/include/MetaNN/data/batch/: array.h  batch.h  duplicate.h  matrix.h
cpp/Template/include/MetaNN/data/facilities/: allocators.h  continuous_memory.h  lower_access.h  tags.h  traits.h
cpp/Template/include/MetaNN/data/matrices/: cpu_matrix.h  matrices.h  one_hot_vector.h  trivial_matrix.h  (+1 more)
cpp/Template/include/MetaNN/facilities/: traits.h
cpp/Template/include/MetaNN/operators/: abs.h  add.h  collapse.h  divide.h  dot.h  element_mul.h  interpolate.h  negative_log_likelihood.h  negative_log_likelihood_derivative.h  operators.h  sigmoid.h  sigmoid_derivative.h  sign.h  softmax.h  softmax_derivative.h  substract.h  tanh.h  tanh_derivative.h  transpose.h
cpp/Template/src/: run.cpp  template.cpp
(+869 files in other folders)
